--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@ h3, a{
 }
 body{
   background: url("https://i.imgur.com/tW0CB9o.jpg") no-repeat fixed;
-  background-size: cover
+  background-size: 100vh;
 }
 .container{
   background-color: hsla(0, 0%, 0%, 0.5)
