--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@ body{
   
 }
 .btn{
-  
+  font-size: 16px;
   border-color: white;
 }
 
@@ -62,7 +62,7 @@ a:hover, a:visited {
   h3 {
     font-size: 16px;
   }
-.btn {
+  .btn {
   font-size: 12px;
   padding: 2px 5px;
   margin: 2px;
